edits table title style, fixes z-index override, aligns headers with input borders

--- a/ui/layouts/table-header-layout.reel/table-header-layout.css
+++ b/ui/layouts/table-header-layout.reel/table-header-layout.css
@@ -15,8 +15,7 @@
 .TableHeaderLayout-cell {
     position: relative;
     font-weight: 400;
-    /* color: #16171A; */
-    padding: 1em;
+    padding: 1em .5em;
     flex: 1;
 }
 
